--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     height: 100%;
 }
 
-.img-sel{
+.img-sel,.image-selector img{
     height: 20%;
     width: 100%;
     background-repeat: no-repeat;
@@ -86,4 +86,46 @@
     width: 8%;
     transform: rotate(180deg);
     height: 20px;
+}
+
+.image-selector img{
+    display: flex;
+    flex-direction: column;
+}
+
+.up-a{
+    position: relative;
+    left: 46%;
+    top: 0;
+    width: 8%;
+    height: 20px;
+}
+
+.down-a{
+    position: relative;
+    left: 46%;
+    width: 8%;
+    transform: rotate(180deg);
+    height: 20px;
+}
+
+.img-display-array{
+    width: 80%;
+    height: 100%;
+}
+
+#img-display{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.img-content{
+    height: 150px;
+    position: relative;
+    z-index: 1;
+    width: 56%;
+    top: -154px;
+    right: -469px;
+    color: white;
 }
